Fix z-index

--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,11 @@ footer {
   background-color: #fff;
 }
 
+.th-name-cell {
+  left: 0px;
+  z-index: 2;
+}
+
 .td-name-cell {
   background-color: #fff;
   position: sticky;
